# Native-renderer

./: CMakeLists.txt
core/: CMakeLists.txt
core/includes/Core/: main.hpp
core/src/: main.cpp
test/: CMakeLists.txt
test/src/: main.cpp  test.cpp
